--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -43,7 +43,7 @@
 \vspace*{1cm}
 {\large Généré par Doxygen 1.6.3}\\
 \vspace*{0.5cm}
-{\small Sat Mar 3 21:53:26 2012}\\
+{\small Sat Mar 3 22:38:02 2012}\\
 \end{center}
 \end{titlepage}
 \clearemptydoublepage
@@ -52,5 +52,9 @@
 \clearemptydoublepage
 \pagenumbering{arabic}
 \hypersetup{pageanchor=true}
+\chapter{Index des fichiers}
+\input{files}
+\chapter{Documentation des fichiers}
+\input{main_8c}
 \printindex
 \end{document}
